# pyMetadataEditor

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  pyproject.toml
pymetadataeditor/: __init__.py  interface.py  schemas.py  tools.py
pymetadataeditor/schemas/: __init__.py  common_schemas.py  survey_schema.py  timeseries_schema.py
pymetadataeditor/schemas/jsonschema/: README.md  datacite-schema.json  datafile-schema.json  ddi-schema.json  survey-schema.json  timeseries-schema.json  variable-group-schema.json  variable-schema.json
pymetadataeditor/schemas/pydantic_definitions/: common_schemas.py  survey_schema.py  timeseries_schema.py
tests/: test_interface.py  test_schemas.py  test_tools.py
