[tool.poetry]
name = "pymetadataeditor"
version = "0.1.0"
description = "Metadata editor client in python"
authors = ["Gordon Blackadder <iblackadder@worldbank.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ipykernel = "^6.29.4"
pre-commit = "^3.7.1"
isort = "^5.13.2"
ruff = "^0.4.8"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
